--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
 
     <br />
     </div>
-    <script src="https://bitter-quail-45.loca.lt/socket.io/socket.io.js"></script>
+    <script src="socket.io/socket.io.js"></script>
   </body>
 
   <script>
-  const socket = io.connect("https://bitter-quail-45.loca.lt");	
+  const socket = io.connect("http://localhost:3000/");	
   
   function createRoom() {
 		var title = document.getElementById("title").value;
@@ -218,7 +218,6 @@
   socket.on("error", (args) => {
     console.log("error, 全てのケースに", args)
   })
-	
     
  </script>
   
