--- a/phone.html
+++ b/phone.html
@@ -128,11 +128,11 @@
     </form>
 
     </div>
-    <script src="https://univas.herokuapp.com/socket.io/socket.io.js"></script>
+    <script src="http://localhost:4000/socket.io/socket.io.js"></script>
   </body>
 
   <script>
-  const socket = io.connect("https://univas.herokuapp.com/");	
+  const socket = io.connect("http://localhost:4000/");	
   
   function createRoom() {
 		var title = document.getElementById("title").value;
@@ -140,7 +140,7 @@
 		var ipaddress = document.getElementById("ipaddress").value;
 		var language = document.getElementById("language").value;
 		
-    socket.emit("create-room", ({title, username, ipaddress, language}), (response) => {
+    socket.emit("create-room", ({title, username, uniqueId: ipaddress, language}), (response) => {
 			console.log(response);
       document.getElementById("roomId").value = response.roomId;
 		});
@@ -148,7 +148,7 @@
 	
 	function leaveRoom(){
 		var ipaddress = document.getElementById("ipaddress").value
-		socket.emit("leave-room", ({ipaddress: ipaddress}));
+		socket.emit("leave-room", ({uniqueId: ipaddress}));
 	}
 
 	function terminateRoom(){
@@ -163,7 +163,7 @@
 		var ipaddress = document.getElementById("joinIpaddress").value;
 		var language = document.getElementById("joinLanguage").value;
 
-    socket.emit("join-room", {username, roomId, ipaddress, language}, (arg) => {
+    socket.emit("join-room", {username, roomId, uniqueId: ipaddress, language}, (arg) => {
       console.log(arg)
     });
   }
@@ -173,14 +173,14 @@
 		var fontColor = document.getElementById("fontColor").value;
 		var fontSize = document.getElementById("fontSize").value;
 
-    socket.emit("change-accessibility", ({fontSize_per: fontSize, fontColor, ipaddress}));
+    socket.emit("change-accessibility", ({fontSize_per: fontSize, fontColor, uniqueId: ipaddress}));
   }
 
   function changeMode() {
 		var ipaddress = document.getElementById("modIpaddress").value;
 		var mode = document.getElementById("mode").value;
 
-    socket.emit("change-mode", ({ipaddress, mode}));
+    socket.emit("change-mode", ({uniqueId: ipaddress, mode}));
   }
 
   function updateTitle() {
