--- a/device.html
+++ b/device.html
@@ -87,6 +87,14 @@
   socket.on("error", (args) => {
     console.log("error, 全てのケースに", args)
   })
+
+  socket.on("emit-log", (args) => {
+    console.log("emit-log, 全ての本体に：", args)
+  })
+
+  socket.on("emit-reaction", (args) => {
+    console.log("emit-reaction, 全ての本体に：", args)
+  })
     
  </script>
   
